edge_config/envoy/edge-envoy.yaml
---
###########################################################
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000
###########################################################
node:
  cluster: edge-proxy
  id: edge-proxy-sidecar-proxy
###########################################################
static_resources:
  listeners:
    #------------------------------------------------------
    # HTTPS listener on port 443
    # This listener statically defines the domains / paths that we know how to route.
    - name: edge-https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: edge_https
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/dev/stdout"
                http_filters:
                  - name: envoy.health_check
                    config:
                      headers:
                        - name: ":path"
                          prefix_match: "/healthz"
                      pass_through_mode: false
                  - name: envoy.router
                    config: {}
                route_config:
                  name: edge_routes
                  validate_clusters: false # IMPORTANT - if true, envoy would error at startup because the clusters referenced below have not yet been provided by Consul
                  virtual_hosts:
                    - name: edge_routes
                      domains:
                        - "*"
                      routes:
                        #------------------------------------
                        - match:
                            prefix: "/api"
                          route:
                            # Consul > 1.6
                            # CONSUL_DC & CONSUL_TRUST_DOMAIN will be substituted in docker-entrypoint.sh
                            cluster: api.default.${CONSUL_DC}.internal.${CONSUL_TRUST_DOMAIN}

                            # Consul < 1.6.x
                            # cluster: api
                        #------------------------------------
                        - match:
                            prefix: "/"
                          route:
                            # Consul > 1.6
                            cluster: web.default.${CONSUL_DC}.internal.${CONSUL_TRUST_DOMAIN}

                            # Consul < 1.6
                            # cluster: web

                    - name: consul
                      domains:
                        - edge.domain.com
                        - edge.domain.com:*
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: consul

          tls_context:
            common_tls_context:
              tls_certificates:
                certificate_chain:
                  filename: "/config/edge.crt"
                private_key:
                  filename: "/config/edge.key"
    #------------------------------------------------------
    # Plaintext HTTP listener on port 80.
    # - Exposes a healthcheck endpoint for LoadBalancers to poll
    # - All other requests are redirected to port 443
    - name: edge-http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: edge_http
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/dev/stdout"
                http_filters:
                  - name: envoy.health_check
                    config:
                      headers:
                        - name: ":path"
                          prefix_match: "/healthz"
                      pass_through_mode: false
                  - name: envoy.router
                    config: {}
                route_config:
                  name: catch_all_redirect
                  validate_clusters: false
                  virtual_hosts:
                    - name: all
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          redirect:
                            https_redirect: true
  ###########################################################
  clusters:
    # local consul agent
    - name: local_agent
      connect_timeout: 1s
      type: STATIC
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8502

    # consul server cluster
    - name: consul
      type: STRICT_DNS
      dns_resolvers:
        - socket_address:
            address: 127.0.0.1
            port_value: 8600
      connect_timeout: 2s
      lb_policy: round_robin
      load_assignment:
        cluster_name: consul
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: consul.service.consul.
                      port_value: 8500
###########################################################
dynamic_resources:
  lds_config:
    ads: {}
  cds_config:
    ads: {}
  ads_config:
    api_type: GRPC
    grpc_services:
      initial_metadata:
        - key: x-consul-token
          value: ""
      envoy_grpc:
        cluster_name: local_agent
    initial_fetch_timeout: 5s
